appview/pages: rework followers/following/repos pages to use profile layout
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/user/followers.html
+++ b/appview/pages/templates/user/followers.html
@@ -1,21 +1,9 @@
 {{ define "title" }}{{ or .Card.UserHandle .Card.UserDid }} · followers {{ end }}
 
-{{ define "extrameta" }}
-    <meta property="og:title" content="{{ or .Card.UserHandle .Card.UserDid }}'s followers" />
-    <meta property="og:type" content="object" />
-    <meta property="og:url" content="https://tangled.sh/{{ or .Card.UserHandle .Card.UserDid }}?tab=followers" />
-    <meta property="og:description" content="{{ or .Card.Profile.Description .Card.UserHandle .Card.UserDid }}" />
-{{ end }}
-
-{{ define "content" }}
-<div class="grid grid-cols-1 md:grid-cols-11 gap-4">
-    <div class="md:col-span-3 order-1 md:order-1">
-        {{ template "user/fragments/profileCard" .Card }}
-    </div>
-    <div id="all-followers" class="md:col-span-8 order-2 md:order-2">
-        {{ block "followers" . }}{{ end }}
-    </div>
-</div>
+{{ define "profileContent" }}
+  <div id="all-followers" class="md:col-span-8 order-2 md:order-2">
+    {{ block "followers" . }}{{ end }}
+  </div>
 {{ end }}
 
 {{ define "followers" }}
