--- a/appview/pages/templates/user/following.html
+++ b/appview/pages/templates/user/following.html
@@ -1,21 +1,9 @@
 {{ define "title" }}{{ or .Card.UserHandle .Card.UserDid }} · following {{ end }}
 
-{{ define "extrameta" }}
-    <meta property="og:title" content="{{ or .Card.UserHandle .Card.UserDid }}'s following" />
-    <meta property="og:type" content="object" />
-    <meta property="og:url" content="https://tangled.sh/{{ or .Card.UserHandle .Card.UserDid }}?tab=following" />
-    <meta property="og:description" content="{{ or .Card.Profile.Description .Card.UserHandle .Card.UserDid }}" />
-{{ end }}
-
-{{ define "content" }}
-<div class="grid grid-cols-1 md:grid-cols-11 gap-4">
-    <div class="md:col-span-3 order-1 md:order-1">
-        {{ template "user/fragments/profileCard" .Card }}
-    </div>
-    <div id="all-following" class="md:col-span-8 order-2 md:order-2">
-        {{ block "following" . }}{{ end }}
-    </div>
-</div>
+{{ define "profileContent" }}
+  <div id="all-following" class="md:col-span-8 order-2 md:order-2">
+      {{ block "following" . }}{{ end }}
+  </div>
 {{ end }}
 
 {{ define "following" }}
