appview/pages: move topbar and footer into fragments
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/layouts/fragments/footer.html
+++ b/appview/pages/templates/layouts/fragments/footer.html
@@ -1,4 +1,4 @@
-{{ define "layouts/footer" }}
+{{ define "layouts/fragments/footer" }}
 <div class="w-full p-4 md:p-8 bg-white dark:bg-gray-800 rounded-t drop-shadow-sm">
   <div class="container mx-auto max-w-7xl px-4">
     <div class="flex flex-col lg:flex-row justify-between items-start text-gray-600 dark:text-gray-400 text-sm gap-8">
