--- a/appview/pages/templates/layouts/base.html
+++ b/appview/pages/templates/layouts/base.html
@@ -17,7 +17,7 @@
         <body class="min-h-screen grid grid-cols-1 grid-rows-[min-content_auto_min-content] md:grid-cols-12 gap-4 bg-slate-100 dark:bg-gray-900 dark:text-white transition-colors duration-200">
           {{ block "topbarLayout" . }}
             <header class="px-1 col-span-1 md:col-start-3 md:col-span-8" style="z-index: 20;">
-              {{ template "layouts/topbar" . }}
+              {{ template "layouts/fragments/topbar" . }}
             </header>
           {{ end }}
 
@@ -39,7 +39,7 @@
 
           {{ block "footerLayout" . }}
             <footer class="px-1 col-span-1 md:col-start-3 md:col-span-8 mt-12">
-              {{ template "layouts/footer" . }}
+              {{ template "layouts/fragments/footer" . }}
             </footer>
           {{ end }}
         </body>
