--- a/appview/pages/templates/repo/pulls/interdiff.html
+++ b/appview/pages/templates/repo/pulls/interdiff.html
@@ -30,7 +30,7 @@
 
 {{ define "topbarLayout" }}
   <header class="px-1 col-span-full" style="z-index: 20;">
-    {{ template "layouts/topbar" . }}
+    {{ template "layouts/fragments/topbar" . }}
   </header>
 {{ end }}
 
@@ -55,7 +55,7 @@
 
 {{ define "footerLayout" }}
   <footer class="px-1 col-span-full mt-12">
-    {{ template "layouts/footer" . }}
+    {{ template "layouts/fragments/footer" . }}
   </footer>
 {{ end }}
 
