--- a/appview/pages/templates/spindles/index.html
+++ b/appview/pages/templates/spindles/index.html
@@ -1,8 +1,16 @@
 {{ define "title" }}spindles{{ end }}
 
 {{ define "content" }}
-<div class="px-6 py-4">
-  <h1 class="text-xl font-bold dark:text-white">Spindles</h1>
+<div class="px-6 py-4 flex items-end justify-start gap-4 align-bottom">
+    <h1 class="text-xl font-bold dark:text-white">Spindles</h1>
+
+
+    <span class="flex items-center gap-1 text-sm">
+        {{ i "book" "w-3 h-3" }}
+        <a href="https://tangled.sh/@tangled.sh/core/blob/master/docs/spindle/hosting.md">
+            docs
+        </a>
+    </span>
 </div>
 
 <section class="bg-white dark:bg-gray-800 p-6 rounded relative w-full mx-auto drop-shadow-sm dark:text-white">
@@ -15,14 +23,11 @@
 {{ end }}
 
 {{ define "about" }}
-  <section class="rounded flex flex-col gap-2">
-    <p class="dark:text-gray-300">
-      Spindles are small CI runners.
-      <a href="https://tangled.sh/@tangled.sh/core/blob/master/docs/spindle/hosting.md">
-        Checkout the documentation if you're interested in self-hosting.
-      </a>
+<section class="rounded flex items-center gap-2">
+    <p class="text-gray-500 dark:text-gray-400">
+        Spindles are small CI runners.
     </p>
-  </section>
+</section>
 {{ end }}
 
 {{ define "list" }}
