appview/pages: add strings tab to profile
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/layouts/fragments/topbar.html
+++ b/appview/pages/templates/layouts/fragments/topbar.html
@@ -61,7 +61,7 @@
     >
         <a href="/{{ $user }}">profile</a>
         <a href="/{{ $user }}?tab=repos">repositories</a>
-        <a href="/strings/{{ $user }}">strings</a>
+        <a href="/{{ $user }}?tab=strings">strings</a>
         <a href="/knots">knots</a>
         <a href="/spindles">spindles</a>
         <a href="/settings">settings</a>
