--- a/appview/pages/templates/layouts/repobase.html
+++ b/appview/pages/templates/layouts/repobase.html
@@ -71,8 +71,8 @@
                             <span class="flex items-center justify-center">
                                 {{ i $icon "w-4 h-4 mr-2" }}
                                 {{ $key }}
-                                {{ if not (isNil $meta) }}
-                                <span class="bg-gray-200 dark:bg-gray-700 rounded py-1/2 px-1 text-sm ml-1">{{  $meta }}</span>
+                                {{ if $meta }}
+                                  <span class="bg-gray-200 dark:bg-gray-700 rounded py-1/2 px-1 text-sm ml-1">{{  $meta }}</span>
                                 {{ end }}
                             </span>
                         </div>
