--- a/appview/pages/templates/timeline/timeline.html
+++ b/appview/pages/templates/timeline/timeline.html
@@ -158,7 +158,7 @@
   </div>
   <div class="py-4 px-6 drop-shadow-sm rounded bg-white dark:bg-gray-800 flex items-center gap-4">
     <div class="flex-shrink-0 max-h-full w-24 h-24">
-      <img class="object-cover rounded-full p-2" src="{{ fullAvatar $subjectHandle }}" />
+      <img alt="" class="object-cover rounded-full p-2" src="{{ fullAvatar $subjectHandle }}" />
     </div>
 
     <div class="flex-1 min-h-0 justify-around flex flex-col">
