--- a/appview/pages/templates/user/fragments/picHandle.html
+++ b/appview/pages/templates/user/fragments/picHandle.html
@@ -1,7 +1,7 @@
 {{ define "user/fragments/picHandle" }}
 <img
     src="{{ tinyAvatar . }}"
-    alt="{{ . }}"
+    alt=""
     class="rounded-full h-6 w-6 mr-1 border border-gray-300 dark:border-gray-700"
 />
 {{ . | truncateAt30 }}
