appview/pages: use label element for knot selector label
Fixes https://tangled.sh/@tangled.sh/core/issues/172

Signed-off-by: noClaps <git@zerolimits.dev>

--- a/appview/pages/templates/repo/fork.html
+++ b/appview/pages/templates/repo/fork.html
@@ -19,7 +19,7 @@
                 class="mr-2"
                 id="domain-{{ . }}"
                 />
-            <span class="dark:text-white">{{ . }}</span>
+            <label for="domain-{{ . }}" class="dark:text-white">{{ . }}</label>
           </div>
         {{ else }}
         <p class="dark:text-white">No knots available.</p>
