--- a/appview/pages/templates/repo/new.html
+++ b/appview/pages/templates/repo/new.html
@@ -49,7 +49,7 @@
                 class="mr-2"
                 id="domain-{{ . }}"
                 />
-            <span class="dark:text-white">{{ . }}</span>
+            <label for="domain-{{ . }}" class="dark:text-white">{{ . }}</label>
           </div>
         {{ else }}
         <p class="dark:text-white">No knots available.</p>
