--- a/appview/pages/templates/repo/issues/fragments/editIssueComment.html
+++ b/appview/pages/templates/repo/issues/fragments/editIssueComment.html
@@ -1,51 +1,43 @@
 {{ define "repo/issues/fragments/editIssueComment" }}
-  {{ with .Comment }}
-  <div id="comment-container-{{.CommentId}}">
-    <div class="flex items-center gap-2 mb-2 text-gray-500 dark:text-gray-400 text-sm flex-wrap">
-      {{ $owner := didOrHandle $.LoggedInUser.Did $.LoggedInUser.Handle }}
-      <a href="/{{ $owner }}" class="no-underline hover:underline">{{ $owner }}</a>
+  <div id="comment-body-{{.Comment.Id}}" class="pt-2">
+    <textarea
+      id="edit-textarea-{{ .Comment.Id }}"
+      name="body"
+      class="w-full p-2 rounded border border-gray-200 dark:border-gray-700"
+      rows="5"
+      autofocus>{{ .Comment.Body }}</textarea>
 
-      <!-- show user "hats" -->
-      {{ $isIssueAuthor := eq .OwnerDid $.Issue.OwnerDid }}
-      {{ if $isIssueAuthor }}
-      <span class="before:content-['·']"></span>
-        author
-      {{ end }}
-
-      <span class="before:content-['·']"></span>
-      <a
-          href="#{{ .CommentId }}"
-          class="text-gray-500 dark:text-gray-400 hover:text-gray-500 dark:hover:text-gray-400 hover:underline no-underline"
-          id="{{ .CommentId }}">
-        {{ template "repo/fragments/time" .Created }}
-      </a>
-
-      <button
-        class="btn px-2 py-1 flex items-center gap-2 text-sm group"
-        hx-post="/{{ $.RepoInfo.FullName }}/issues/{{ .Issue }}/comment/{{ .CommentId }}/edit"
-        hx-include="#edit-textarea-{{ .CommentId }}"
-        hx-target="#comment-container-{{ .CommentId }}"
-        hx-swap="outerHTML">
-        {{ i "check" "w-4 h-4" }}
-        {{ i "loader-circle" "w-4 h-4 animate-spin hidden group-[.htmx-request]:inline" }}
-      </button>
-      <button
-        class="btn px-2 py-1  flex items-center gap-2 text-sm"
-        hx-get="/{{ $.RepoInfo.FullName }}/issues/{{ .Issue }}/comment/{{ .CommentId }}/"
-        hx-target="#comment-container-{{ .CommentId }}"
-        hx-swap="outerHTML">
-        {{ i "x" "w-4 h-4" }}
-      </button>
-      <span id="comment-{{.CommentId}}-status"></span>
-    </div>
-
-    <div>
-      <textarea
-        id="edit-textarea-{{ .CommentId }}"
-        name="body"
-        class="w-full p-2 border rounded min-h-[100px]">{{ .Body }}</textarea>
-    </div>
+    {{ template "editActions" $ }}
   </div>
-  {{ end }}
 {{ end }}
 
+{{ define "editActions" }}
+  <div class="flex flex-wrap items-center justify-end gap-2 text-gray-500 dark:text-gray-400 text-sm pt-2">
+    {{ template "cancel" . }}
+    {{ template "save" . }}
+  </div>
+{{ end }}
+
+{{ define "save" }}
+  <button
+    class="btn-create py-0 flex gap-1 items-center group text-sm"
+    hx-post="/{{ .RepoInfo.FullName }}/issues/{{ .Issue.IssueId }}/comment/{{ .Comment.Id }}/edit"
+    hx-include="#edit-textarea-{{ .Comment.Id }}"
+    hx-target="#comment-body-{{ .Comment.Id }}"
+    hx-swap="outerHTML">
+    {{ i "check" "size-4" }}
+    save
+    {{ i "loader-circle" "w-4 h-4 animate-spin hidden group-[.htmx-request]:inline" }}
+  </button>
+{{ end }}
+
+{{ define "cancel" }}
+  <button
+    class="btn py-0 text-red-500 dark:text-red-400 flex gap-1 items-center group"
+    hx-get="/{{ .RepoInfo.FullName }}/issues/{{ .Issue.IssueId }}/comment/{{ .Comment.Id }}/"
+    hx-target="#comment-body-{{ .Comment.Id }}"
+    hx-swap="outerHTML">
+    {{ i "x" "size-4" }}
+    cancel
+  </button>
+{{ end }}
