--- a/appview/pages/templates/errors/404.html
+++ b/appview/pages/templates/errors/404.html
@@ -17,7 +17,7 @@
                 The page you're looking for doesn't exist. It may have been moved, deleted, or you have the wrong URL.
             </p>
             <div class="flex flex-col sm:flex-row gap-3 justify-center items-center mt-6">
-                <a href="javascript:history.back()" class="btn px-4 py-2 rounded flex items-center gap-2 no-underline hover:no-underline text-gray-600 dark:text-gray-300 border border-gray-300 dark:border-gray-600 hover:bg-gray-50 dark:hover:bg-gray-700">
+                <a href="javascript:history.back()" class="btn no-underline hover:no-underline gap-2">
                     {{ i "arrow-left" "w-4 h-4" }}
                     go back
                 </a>
