--- a/appview/pages/templates/errors/503.html
+++ b/appview/pages/templates/errors/503.html
@@ -17,11 +17,11 @@
                 We were unable to reach the knot hosting this repository. The service may be temporarily unavailable.
             </p>
             <div class="flex flex-col sm:flex-row gap-3 justify-center items-center mt-6">
-                <button onclick="location.reload()" class="btn-create px-4 py-2 rounded flex items-center gap-2 no-underline hover:no-underline hover:text-white">
+                <button onclick="location.reload()" class="btn-create gap-2">
                     {{ i "refresh-cw" "w-4 h-4" }}
                     try again
                 </button>
-                <a href="/" class="btn px-4 py-2 rounded flex items-center gap-2 no-underline hover:no-underline text-gray-600 dark:text-gray-300 border border-gray-300 dark:border-gray-600 hover:bg-gray-50 dark:hover:bg-gray-700">
+                <a href="/" class="btn gap-2 no-underline hover:no-underline">
                     {{ i "arrow-left" "w-4 h-4" }}
                     back to timeline
                 </a>
