--- a/appview/pages/templates/errors/knot404.html
+++ b/appview/pages/templates/errors/knot404.html
@@ -17,7 +17,7 @@
                 The repository you were looking for could not be found. The knot serving the repository may be unavailable.
             </p>
             <div class="flex flex-col sm:flex-row gap-3 justify-center items-center mt-6">
-                <a href="/" class="btn px-4 py-2 rounded flex items-center gap-2 no-underline hover:no-underline">
+                <a href="/" class="btn flex items-center gap-2 no-underline hover:no-underline">
                     {{ i "arrow-left" "w-4 h-4" }}
                     back to timeline
                 </a>
