--- a/appview/pages/templates/user/settings/keys.html
+++ b/appview/pages/templates/user/settings/keys.html
@@ -4,8 +4,8 @@
   <div class="p-6">
     <p class="text-xl font-bold dark:text-white">Settings</p>
   </div>
-  <div class="bg-white dark:bg-gray-800">
-    <section class="w-full grid grid-cols-1 md:grid-cols-4 gap-6 p-6">
+  <div class="bg-white dark:bg-gray-800 p-6 rounded relative w-full mx-auto drop-shadow-sm dark:text-white">
+    <section class="w-full grid grid-cols-1 md:grid-cols-4 gap-6">
       <div class="col-span-1">
         {{ template "user/settings/fragments/sidebar" . }}
       </div>
