appview/issues: switch to discussions-style
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/layouts/repobase.html
+++ b/appview/pages/templates/layouts/repobase.html
@@ -42,7 +42,7 @@
     </section>
 
     <section
-        class="w-full flex flex-col drop-shadow-sm"
+        class="w-full flex flex-col"
     >
         <nav class="w-full pl-4 overflow-auto">
             <div class="flex z-60">
@@ -81,7 +81,7 @@
             </div>
         </nav>
         <section
-            class="bg-white dark:bg-gray-800 p-6 rounded relative w-full mx-auto drop-shadow-sm dark:text-white"
+            class="bg-white dark:bg-gray-800 p-6 rounded relative w-full mx-auto dark:text-white"
         >
             {{ block "repoContent" . }}{{ end }}
         </section>
